// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputButton with normal options Render InputButton with normal option type 1`] = `
<div>
  <div
    class="survey-question__input-button-group-container"
  >
    <div
      class="survey-question__input-button-input-container"
    >
      <button
        class="survey-section__button button green large"
        id="test__input-button__val1"
        type="button"
      >
        english value
      </button>
    </div>
    <div
      class="survey-question__input-button-input-container"
    >
      <button
        class="survey-section__button button red small"
        id="test__input-button__val2"
        type="button"
      >
        Unilingual label
      </button>
    </div>
    <div
      class="survey-question__input-button-input-container"
    >
      <button
        class="survey-section__button button green large"
        id="test__input-button__conditionalVal"
        type="button"
      >
        english conditional
      </button>
    </div>
    <div
      class="survey-question__input-button-input-container"
    >
      <button
        class="survey-section__button button green large"
        id="test__input-button__val3"
        type="button"
      >
        Translated string
      </button>
    </div>
  </div>
</div>
`;

exports[`Render InputButton with choice function 1`] = `
<div>
  <div
    class="survey-question__input-button-group-container no-wrap align-center"
  >
    <div
      class="survey-question__input-button-input-container"
    >
      <button
        class="survey-section__button button green large"
        id="test__input-button__val1"
        type="button"
      >
        english value
      </button>
    </div>
    <div
      class="survey-question__input-button-input-container"
    >
      <button
        class="survey-section__button button red small"
        id="test__input-button__val2"
        type="button"
      >
        Unilingual label
      </button>
    </div>
  </div>
</div>
`;
